src/examples/errors/param_count_mismatch.del


def f(int a, int b) -> nil {

    return;
}

def main() -> nil {

    f(3);
    return;
}